<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_rviz</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ssarana@qti.qualcomm.com">sofiia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>bt_msgs</depend>
  <depend>rviz2</depend>

  <depend>pluginlib</depend>
  <depend>class_loader</depend>
  <depend>rviz_common</depend>


  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/rviz_common_plugins.xml"></rviz>
  </export>
</package>
